Lazy load thumbnails in thumbnail strip – only if they are visible in the viewport – to prevent performance issues and time-outs with loading the main image in the viewer when initializing Edit Manifest view with manifests that contain a lot of canvases

--- a/app/styles/components/_thumbnail-strip.scss
+++ b/app/styles/components/_thumbnail-strip.scss
@@ -67,7 +67,20 @@
     }
   }
 
+  
   .thumbnail-strip-canvas {
+
+    .LazyLoad {
+      min-width: 100px;
+      min-height: 150px;
+      border-radius: 3px;
+      border: 1px solid #eee;
+    } 
+
+    .LazyLoad.is-visible {
+      border: none;
+    } 
+
     &.active img {
       border: 3px solid $iiifRed;
       border-radius: 5px;
